--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenido a Puzzle JS</h1>
+        <h1 class="text-center">Bienvenido a Puzzle JS</h1>
     </div>
 </body>
 </html>
