--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Puzzle JS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="container">
         <h1 class="text-center">Bienvenido a Puzzle JS</h1>
+        <div class="row">
+            <div class="col-4">
+                <div class="row">
+                    <div class="col-12"><img src="img/geralt/default.jpg" alt=""></div>
+                </div>
+                <div class="row">
+                    <div class="col-12">Geralt de rivia</div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
