feat: Se agrega los javascript del localStorage
Se enlaza a la pagina del puzzle y se crea una función para almacenar
objetos en el localStorage.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <title>Puzzle JS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/storage.js"></script>
+    <script src="js/juego.js"></script>
 </head>
 <body>
     <div class="container">
         <h1 class="text-center">Bienvenido a Puzzle JS</h1>
         <div class="row">
-            <div class="col-4">
-                <div class="row">
-                    <div class="col-12"><img src="img/geralt/default.jpg" alt=""></div>
+            <a href="templates/puzzle.html">
+                <div class="col-4">
+                    <div class="row">
+                        <div class="col-12"><img src="img/geralt/default.jpg" alt=""></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">Geralt de rivia</div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-12">Geralt de rivia</div>
-                </div>
-            </div>
+            </a>
         </div>
     </div>
 </body>
