feat: Se agrega función para guardar puzzle escogido

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <h1 class="text-center">Bienvenido a Puzzle JS</h1>
         <div class="row">
-            <a href="templates/puzzle.html">
+            <a href="templates/puzzle.html" onclick="escogePuzzle('geralt')">
                 <div class="col-4">
                     <div class="row">
                         <div class="col-12"><img src="img/geralt/default.jpg" alt=""></div>
